# anchor-pinochio-security-template

./: .gitignore  Cargo.toml  FRAMEWORK_COMPARISON.md  LEARNING_PATH.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  pattern_suggestion.md
.github/workflows/: ci.yml
deep-dive/: cpi-reentrancy.md  unsafe-arithmetic.md
deep-dive/02-authority-checks/: common-mistakes.md  common-patterns.md  decision-tree.md  index.md  ownership-model.md  real-world-examples.md  web-comparison.md
patterns/: README-TESTS.md
patterns/00-spike-pinocchio/: Cargo.toml
patterns/00-spike-pinocchio/src/: lib.rs
patterns/01-missing-validation/: Anchor.toml  README.md
patterns/01-missing-validation/pinocchio-programs/pinocchio-secure/: Cargo.toml
patterns/01-missing-validation/pinocchio-programs/pinocchio-secure/src/: lib.rs
patterns/01-missing-validation/pinocchio-programs/pinocchio-vulnerable/: Cargo.toml
patterns/01-missing-validation/pinocchio-programs/pinocchio-vulnerable/src/: lib.rs
patterns/01-missing-validation/programs/secure/: Cargo.toml
patterns/01-missing-validation/programs/secure/src/: lib.rs
patterns/01-missing-validation/programs/vulnerable/: Cargo.toml
patterns/01-missing-validation/programs/vulnerable/src/: lib.rs
patterns/01-missing-validation/tests/: exploit-demo.ts  pinocchio-comparison.ts
patterns/02-authority-checks/: Anchor.toml  README.md
patterns/02-authority-checks/pinocchio-programs/pinocchio-secure/: Cargo.toml
patterns/02-authority-checks/pinocchio-programs/pinocchio-secure/src/: lib.rs
patterns/02-authority-checks/pinocchio-programs/pinocchio-vulnerable/: Cargo.toml
patterns/02-authority-checks/pinocchio-programs/pinocchio-vulnerable/src/: lib.rs
patterns/02-authority-checks/programs/secure/: Cargo.toml
patterns/02-authority-checks/programs/secure/src/: lib.rs
patterns/02-authority-checks/programs/vulnerable/: Cargo.toml
patterns/02-authority-checks/programs/vulnerable/src/: lib.rs
patterns/02-authority-checks/tests/: exploit-demo.ts  pinocchio-comparison.ts
patterns/03-unsafe-arithmetic/: Anchor.toml  README.md
patterns/03-unsafe-arithmetic/pinocchio-programs/pinocchio-secure/: Cargo.toml
patterns/03-unsafe-arithmetic/pinocchio-programs/pinocchio-secure/src/: lib.rs
patterns/03-unsafe-arithmetic/pinocchio-programs/pinocchio-vulnerable/: Cargo.toml
patterns/03-unsafe-arithmetic/pinocchio-programs/pinocchio-vulnerable/src/: lib.rs
patterns/03-unsafe-arithmetic/programs/secure/: Cargo.toml
patterns/03-unsafe-arithmetic/programs/secure/src/: lib.rs
patterns/03-unsafe-arithmetic/programs/token-secure/: Cargo.toml
patterns/03-unsafe-arithmetic/programs/token-secure/src/: lib.rs
patterns/03-unsafe-arithmetic/programs/token-vulnerable/: Cargo.toml
patterns/03-unsafe-arithmetic/programs/token-vulnerable/src/: lib.rs
patterns/03-unsafe-arithmetic/programs/vulnerable/: Cargo.toml
patterns/03-unsafe-arithmetic/programs/vulnerable/src/: lib.rs
patterns/03-unsafe-arithmetic/tests/: edge-cases.ts  exploit-demo.ts  pinocchio-comparison.ts  token-manipulation.ts
patterns/04-cpi-reentrancy/: Anchor.toml  README.md
patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-attacker/: Cargo.toml
patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-attacker/src/: lib.rs
patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-secure/: Cargo.toml
patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-secure/src/: lib.rs
patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-vulnerable/: Cargo.toml
patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-vulnerable/src/: lib.rs
patterns/04-cpi-reentrancy/programs/attacker/: Cargo.toml
patterns/04-cpi-reentrancy/programs/attacker/src/: lib.rs
patterns/04-cpi-reentrancy/programs/secure/: Cargo.toml
patterns/04-cpi-reentrancy/programs/secure/src/: lib.rs
patterns/04-cpi-reentrancy/programs/vulnerable/: Cargo.toml
patterns/04-cpi-reentrancy/programs/vulnerable/src/: lib.rs
patterns/04-cpi-reentrancy/tests/: exploit-demo.ts  pinocchio-exploit-demo.ts
patterns/05-pda-derivation/: Anchor.toml  README.md  tsconfig.json
patterns/05-pda-derivation/pinocchio-programs/pinocchio-secure/: Cargo.toml
patterns/05-pda-derivation/pinocchio-programs/pinocchio-secure/src/: lib.rs
patterns/05-pda-derivation/pinocchio-programs/pinocchio-vulnerable/: Cargo.toml
patterns/05-pda-derivation/pinocchio-programs/pinocchio-vulnerable/src/: lib.rs
patterns/05-pda-derivation/programs/secure/: Cargo.toml
patterns/05-pda-derivation/programs/secure/src/: lib.rs
patterns/05-pda-derivation/programs/vulnerable/: Cargo.toml
patterns/05-pda-derivation/programs/vulnerable/src/: lib.rs
patterns/05-pda-derivation/tests/: exploit-demo.ts
patterns/06-token-validation/: Anchor.toml  README.md  tsconfig.json
patterns/06-token-validation/pinocchio-programs/pinocchio-secure/: Cargo.toml
patterns/06-token-validation/pinocchio-programs/pinocchio-secure/src/: lib.rs
patterns/06-token-validation/pinocchio-programs/pinocchio-vulnerable/: Cargo.toml
patterns/06-token-validation/pinocchio-programs/pinocchio-vulnerable/src/: lib.rs
patterns/06-token-validation/programs/secure/: Cargo.toml
patterns/06-token-validation/programs/secure/src/: lib.rs
patterns/06-token-validation/programs/vulnerable/: Cargo.toml
patterns/06-token-validation/programs/vulnerable/src/: lib.rs
patterns/06-token-validation/tests/: exploit-demo.ts  pinocchio-exploit-demo.ts
scripts/: build-all.sh  deploy-devnet.sh  test-all.sh  verify.sh
