[workspace]
resolver = "2"

members = [
    "patterns/00-spike-pinocchio",
    "patterns/01-missing-validation/programs/vulnerable",
    "patterns/01-missing-validation/programs/secure",
    "patterns/01-missing-validation/pinocchio-programs/pinocchio-vulnerable",
    "patterns/01-missing-validation/pinocchio-programs/pinocchio-secure",
    "patterns/02-authority-checks/programs/vulnerable",
    "patterns/02-authority-checks/programs/secure",
    "patterns/02-authority-checks/pinocchio-programs/pinocchio-vulnerable",
    "patterns/02-authority-checks/pinocchio-programs/pinocchio-secure",
    "patterns/03-unsafe-arithmetic/programs/vulnerable",
    "patterns/03-unsafe-arithmetic/programs/secure",
    "patterns/03-unsafe-arithmetic/pinocchio-programs/pinocchio-vulnerable",
    "patterns/03-unsafe-arithmetic/pinocchio-programs/pinocchio-secure",
    "patterns/03-unsafe-arithmetic/programs/token-vulnerable",
    "patterns/03-unsafe-arithmetic/programs/token-secure",
    "patterns/04-cpi-reentrancy/programs/vulnerable",
    "patterns/04-cpi-reentrancy/programs/secure",
    "patterns/04-cpi-reentrancy/programs/attacker",
    "patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-vulnerable",
    "patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-secure",
    "patterns/04-cpi-reentrancy/pinocchio-programs/pinocchio-attacker",
    "patterns/05-pda-derivation/programs/vulnerable",
    "patterns/05-pda-derivation/programs/secure",
    # TODO: Uncomment when pattern is implemented
    # "patterns/06-token-validation/programs/vulnerable",
    # "patterns/06-token-validation/programs/secure",
]

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "3.0"
spl-token = "3.5"          # Legacy token support
spl-token-2022 = "10.0"   # Modern token standard (recommended for new code)

[workspace.lints.rust]
# Allow cfg warnings from Anchor/Solana macros that use cfgs only valid for BPF target
unexpected_cfgs = "allow"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

# Pin constant_time_eq to version compatible with SBF toolchain's rustc 1.84
[workspace.dependencies.constant_time_eq]
version = "0.3.1"
