[package]
name = "pinocchio-vulnerable-missing-validation"
version = "0.1.0"
description = "Pinocchio implementation of vulnerable missing validation pattern"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = { version = "0.10", features = ["alloc"] }
solana-program-log = "1.1"
