[package]
name = "secure-missing-validation"
version = "0.1.0"
description = "Secure program demonstrating proper validation pattern"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_missing_validation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
