[package]
name = "vulnerable-missing-validation"
version = "0.1.0"
description = "Vulnerable program demonstrating missing validation pattern"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vulnerable_missing_validation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
