[package]
name = "secure-authority-checks"
version = "0.1.0"
description = "Secure program demonstrating proper authority validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_authority_checks"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
