[package]
name = "vulnerable-authority-checks"
version = "0.1.0"
description = "Vulnerable program demonstrating authority check failures"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vulnerable_authority_checks"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
