[package]
name = "vulnerable-unsafe-arithmetic"
version = "0.1.0"
description = "Vulnerable program demonstrating unsafe arithmetic operations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vulnerable_unsafe_arithmetic"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
