[package]
name = "pinocchio-attacker-cpi-reentrancy"
version = "0.1.0"
description = "Pinocchio attacker program for CPI re-entrancy demonstration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version = "0.10", features = ["alloc", "cpi"] }
solana-program-log = "1.1"

[features]
no-entrypoint = []
