[package]
name = "attacker-cpi-reentrancy"
version = "0.1.0"
description = "EDUCATIONAL ONLY: Malicious program demonstrating CPI re-entrancy attack"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "attacker_cpi_reentrancy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
vulnerable-cpi-reentrancy = { path = "../vulnerable", features = ["cpi"] }

[lints]
workspace = true
