[package]
name = "vulnerable-cpi-reentrancy"
version = "0.1.0"
description = "Vulnerable program demonstrating CPI re-entrancy vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vulnerable_cpi_reentrancy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[lints]
workspace = true
