[package]
name = "secure-pda-derivation"
version = "0.1.0"
description = "Secure Solana program demonstrating proper PDA derivation patterns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[dev-dependencies]
