[package]
name = "vulnerable-pda-derivation"
version = "0.1.0"
description = "Vulnerable Solana program demonstrating PDA derivation issues"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[dev-dependencies]
