[package]
name = "secure-token-validation"
version = "0.1.0"
description = "Anchor implementation of secure token validation pattern"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_token_validation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }

[lints]
workspace = true
